@@ -255,7 +255,8 @@ public class FindTailCalls extends ExpFullWalker
     if (decl != null)
       decl.setCanWrite(true);
     if (decl != null && decl.value == value && value instanceof LambdaExp
-	&& ! (value instanceof ObjectExp))
+	&& ! (value instanceof ObjectExp)
+        && ! (decl.context instanceof ModuleExp))
       {
 	LambdaExp lexp = (LambdaExp) value; 
 	walkLambdaExp(lexp, false);
